--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
   "dependencies": {
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.26",
-    "expo": "~53.0.22",
-    "expo-status-bar": "~2.2.3",
+    "expo": "^54.0.7",
+    "expo-status-bar": "~3.0.8",
     "nativewind": "^4.1.23",
     "prettier-plugin-tailwindcss": "^0.5.14",
-    "react": "19.0.0",
-    "react-native": "0.79.6",
+    "react": "19.1.0",
+    "react-native": "0.81.4",
     "react-native-reanimated": "^4.1.0",
-    "react-native-safe-area-context": "^5.4.0",
+    "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "^4.16.0",
     "react-native-worklets": "^0.5.1",
     "tailwindcss": "^3.4.17"
