--- a/package.json
+++ b/package.json
@@ -12,21 +12,21 @@
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.26",
     "expo": "^54.0.7",
-    "expo-status-bar": "~3.0.8",
+    "expo-status-bar": "^3.0.8",
     "nativewind": "^4.1.23",
     "prettier-plugin-tailwindcss": "^0.5.14",
-    "react": "19.1.0",
-    "react-native": "0.81.4",
+    "react": "^19.1.0",
+    "react-native": "^0.81.4",
     "react-native-reanimated": "^4.1.0",
-    "react-native-safe-area-context": "~5.6.0",
+    "react-native-safe-area-context": "^5.6.0",
     "react-native-screens": "^4.16.0",
     "react-native-worklets": "^0.5.1",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/react": "~19.0.10",
-    "typescript": "~5.8.3"
+    "@types/react": "^19.1.13",
+    "typescript": "^5.9.2"
   },
   "private": true
 }
